# titan.alpha

./: .coverage  .env.example  .env.test  .gitignore  .unifyignore  AGENTS.md  AUDIT_REPORT.md  GEMINI.md  README.md  VERSIONING.md  backtest_safety.db-shm  backtest_safety.db-wal  backtest_shadow.db-shm  backtest_shadow.db-wal  conftest.py  deployment_checklist.md  final_remediation_implementation_report.md  main.py  pre_training_validation.py  pyproject.toml  requirements-colab.txt  requirements.txt  runbook.md  setup_fork_migration.sh  test_ab_framework.db-shm  test_ab_framework.db-wal  test_log.py  test_output.txt  test_unified.db-shm  test_unified.db-wal  unica.md
.agent/: audit_master_checklist.md
.devcontainer/: devcontainer.json  install.sh
.gemini/: GEMINI.md
api/: auth.py  dashboard_server.py  requirements.txt
config/: __init__.py  constants.py  jules_setup.sh  logging_config.py  settings.py
core/: interfaces.py
coverage_reports/: coverage.xml
dashboard/: .env.example  README.md  index.html  package.json  tailwind.config.js
data/: __init__.py  auto_features.py  buffer.py  dataset.py  events.py  features.py  indicators.py  loader.py  normalizers.py  processor.py  shadow_dataset.py  staleness.py
docs/: EVALUATION_REPORT_IMPLEMENTATION.md  EVALUATION_REPORT_V2_IMPLEMENTATION.md  architectural_master.md  architecture.md  dashboard_api_spec.md  policy_specification.md  safety_mechanisms.md
execution/: __init__.py  adaptive_risk.py  backtest.py  barriers.py  calibration.py  contract_params.py  decision.py  decision_logic.py  ensemble.py  executor.py  (+26 more)
(+544 files in other folders)
